# squirrel_hri

./: .gitignore  .travis.rosinstall  .travis.yml  README.md
libnite2/: CMakeLists.txt  Makefile.tarball  README.md  package.xml
libvad/: CMakeLists.txt  README.md  package.xml
libvad/src/webrtc/base/: checks.h  scoped_ptr.h
libvad/src/webrtc/common_audio/signal_processing/: auto_correlation.c  complex_fft.c  copy_set_operations.c  dot_product_with_scale.c  downsample_fast.c  filter_ar.c  filter_ar_fast_q12.c  filter_ma_fast_q12.c  get_hanning_window.c  ilbc_specific_functions.c  lpc_to_refl_coef.c  min_max_operations.c  randomization_functions.c  resample.c  resample_by_2.c  resample_by_2_mips.c  spl_init.c  spl_sqrt.c  spl_sqrt_floor.c  splitting_filter.c  sqrt_of_one_minus_x_squared.c  vector_scaling_operations.c
libvad/src/webrtc/common_audio/signal_processing/include/: signal_processing_library.h  spl_inl.h
libvad/src/webrtc/common_audio/vad/: vad.cc  vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  vad_sp.c  vad_sp.h  webrtc_vad.c
libvad/src/webrtc/common_audio/vad/include/: vad.h  webrtc_vad.h
spt_helper/: CMakeLists.txt  README.md  package.xml
spt_helper/src/: spt_markers.cpp  spt_skeleton_lines.cpp  spt_user_info.cpp
squirrel_engagement/: plot.py  plot.sh  range  run_batch_all_groups.sh  run_batch_decorder.sh  run_state.sh  run_state_one_person.sh  run_state_two_people.sh  svm_rank_ssl.sh  svm_rank_ssl_live_1.sh  svm_rank_ssl_live_2.sh  svm_rank_ssl_live_3.sh  svm_rank_ssl_record_1.sh  svm_rank_ssl_record_2.sh  svm_rank_ssl_record_3.sh  (+2 more)
squirrel_expression/: CMakeLists.txt  package.xml
squirrel_expression/data/sounds/: readme.txt
squirrel_expression/include/squirrel_expression/: ExpressionServer.h  MotionExpressionServer.h
squirrel_expression/launch/: startup.launch
squirrel_expression/src/: ExpressionServer.cpp  MotionExpressionServer.cpp  expression_demo.py  expression_gui.py  expression_gui.ui
squirrel_gmm_vad/: CMakeLists.txt  README.md
squirrel_gmm_vad/src/example/: VAD.cpp  VAD.h  audio_file_read.c  audio_file_read.h
squirrel_gmm_vad/src/webrtc/common_audio/signal_processing/: auto_corr_to_refl_coef.c  division_operations.c  levinson_durbin.c  refl_coef_to_lpc.c
squirrel_gmm_vad/src/webrtc/common_audio/vad/: vad.cc  vad_core.c  vad_gmm.c  webrtc_vad.c
squirrel_gmm_vad/src/webrtc/common_audio/vad/include/: webrtc_vad.h
squirrel_hri/: CMakeLists.txt  package.xml
squirrel_leg_detector/: CMakeLists.txt  package.xml
squirrel_leg_detector/include/squirrel_leg_detector/: leg_detector.h  people2D_engine.hpp  squirrel_legs_close_to_pose.h
squirrel_leg_detector/launch/: close_to_pose.launch  startup.launch
squirrel_leg_detector/src/: leg_detector.cpp  people2D_engine.cpp  squirrel_legs_close_to_pose.cpp
squirrel_people_tracker/: CMakeLists.txt  package.xml
squirrel_people_tracker/include/squirrel_people_tracker/: focus_head.h  follow_child.h  follow_person.h  squirrel_people_tracker.h
squirrel_people_tracker/launch/: startup.launch
squirrel_people_tracker/src/: focus_head.cpp  follow_child.cpp  follow_person.cpp  squirrel_focus_on_head_node.cpp  squirrel_follow_person_node.cpp  squirrel_people_tracker.cpp  squirrel_people_tracker_node.cpp  test.cpp
squirrel_person_tracker/: CMakeLists.txt  README.md  README2.md  create_nite2_link.bash  nodelet_plugins.xml  package.xml  readme.txt
squirrel_person_tracker/include/squirrel_person_tracker/: ImageUtils.h  floor_pointer.h  people_recognition.h  squirrel_person_tracker.h  squirrel_person_tracker_nodelet.h
squirrel_person_tracker/launch/: shirt_detecter.launch  squirrel_person_tracker_depric.launch  squirrel_person_tracker_nodelet.launch  squirrel_person_tracker_nodelet_separate.launch  squirrel_person_tracker_nodelet_vis.launch  squirrel_person_tracker_robotino.launch
squirrel_person_tracker/src/: ImageUtils.cpp  floor_pointer.cpp  pRecMain.cpp  people_recognition.cpp  shirt_main.cpp  squirrel_person_tracker.cpp  squirrel_person_tracker_main.cpp  squirrel_person_tracker_nodelet.cpp
squirrel_person_tracker/test/: squirrel_person_tracker_floor_point_test.cpp
squirrel_ser/: CMakeLists.txt  README.md  package.xml  requirements.txt
squirrel_ser/launch/: cobotiny.arousal.launch  mic_array_.launch  ser.launch  squirrel.demo.launch  viz.launch
squirrel_ser/model/: MSPEC.all.ar_vl.5.arousal.elm.ckpt  MSPEC.all.ar_vl.5.valence.elm.ckpt  MSPEC_MM.all.ar_vl.0.arousal.elm.ckpt  MSPEC_MM.all.ar_vl.0.valence.elm.ckpt  dnn.framelevell.MSPEC.AIBO.p_a.conv.f_dnn.post_elm.0.elm.ckpt  dnn.framelevell.MSPEC.AIBO.p_a.conv.f_dnn.post_elm.0.h5  dnn.framelevell.MSPEC.AIBO.p_a.conv.f_dnn.post_elm.1.elm.ckpt  dnn.framelevell.MSPEC.AIBO.p_a.conv.f_dnn.post_elm.1.h5  test.p_a.0.elm.ckpt  test.p_a.0.h5
squirrel_ser/scripts/: helper.bash
squirrel_ser/src/: cobotiny_arousal.py  decoding.py  elm.py  feat_ext.py  high_level.py  mic_array.py  offline_ser.py  ser.py  visualisation_ser.py  visualisation_vad.py  viz.py
squirrel_speech/: CMakeLists.txt  LICENSE_Uberi.txt  README.md  package.xml
squirrel_speech/database/german/: vocabulary_with_synonyms.txt
squirrel_speech/src/: __init__.py  pure_py_speech_rec.py  sq_ros_speech_input_test.py  sq_ros_speech_input_test.py~  sq_ros_speech_parser.py  sq_ros_speech_parser.py~  sq_ros_speech_rec.py  sq_ros_speech_rec.py~
squirrel_speech/src/dev_tools/: record_audio.sh  record_audio.sh~
squirrel_speech/src/speech_recognition/: __init__.py
squirrel_speech_rec/: CMakeLists.txt  README.md  package.xml
squirrel_speech_rec/launch/: startup.launch
squirrel_speech_rec/software_architecture/: sq_speech.xml
squirrel_speech_rec/src/: pure_py_speech_rec.py  read_voc.py  speech_visu.cpp  sq_ros_speech_input_test.py  sq_ros_speech_parser.py  sq_ros_speech_rec.py
squirrel_speech_rec/src/dev_tools/: reset_audio.sh
squirrel_speech_rec/src/speech_recognition/: __init__.py  list_audio_devices.py
squirrel_vad/: CMakeLists.txt  README.md  package.xml
squirrel_vad/include/squirrel_vad/: webrtc_vad.h
squirrel_vad/src/: voice_detector.cpp
(+29 files in other folders)
