<?xml version="1.0"?>
<package>
  <name>libnite2</name>
  <version>0.0.0</version>
  <description>Wrapper for the NiTE2 library</description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

  <license>LGPL</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
</package>
