<?xml version="1.0"?>
<package>
  <name>spt_helper</name>
  <version>0.1.0</version>
  <description>The squirrel_tracker package</description>


  <maintainer email="pregier@cs.uni-bonn.de">Peter Regier</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>squirrel_person_tracker_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>squirrel_person_tracker_msgs</run_depend>
  <run_depend>tf</run_depend>
 
  <export> 	
  </export>
</package>
