<?xml version="1.0"?>
<package>
  <name>squirrel_leg_detector</name>
  <version>1.0.0</version>
  <description>The squirrel leg detector package, implemeting laser leg detection by Luciano Spinello</description>

  <maintainer email="zillich@acin.tuwien.ac.at">Michael Zillich</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
